--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "awesome-vue-star-rating": "^1.0.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-rate-it": "^2.1.0",
     "vue-router": "^4.0.3",
+    "vue-star-rating": "^2.1.0",
     "vue3-carousel": "^0.1.40"
   },
   "devDependencies": {
